# PredictLoL

./: .dockerignore  .gitignore  .railway-version  .railway.toml  .railway_trigger  .vercelignore  AGENDAMENTO_FUNCIONANDO.md  AGENDAMENTO_PARTIDAS_CORRIGIDO.md  ALERTAS_PARTIDAS_REAIS_CORRIGIDO.md  ALTERACOES_DADOS_REAIS.md  ALTERNATIVA_RENDER.md  ANALISE_SISTEMA_VALUE_BETTING.md  ANÁLISE_DADOS_SIMULADOS.md  APIS_ALTERNATIVAS_IMPLEMENTADAS.md  ATUALIZAÇÃO_V3_CONCLUÍDA.md  COMANDOS_GRUPO.md  COMANDO_SYSTEM_RESOLVIDO.md  COMO_EVITAR_CONFLITOS.md  CONCLUSÃO_FINAL_SUCESSO.md  CONFIGURACAO_AUTORIZACAO.md  CONFIGURAR_VERCEL.md  CORRECAO_BOTOES_E_MONITOR.md  CORRECAO_BOTOES_FINAL.md  CORRECAO_DASHBOARD_SCROLL_INFINITO.md  CORRECAO_ERRO_SUBSCRICAO.md  CORRECAO_FINAL_CALLBACKS.md  CORRECAO_MAPA_APLICADA.md  CORRECAO_MARKDOWNV2.md  CORRECAO_SUBSCRICOES_FINALIZADA.md  CORRECCOES_APIS.md  CORRECOES_APLICADAS_RELATORIO_FINAL.md  CORRECOES_RAILWAY_DEPLOY.md  CORRECOES_RAILWAY_FINAL.md  CORRECOES_REALIZADAS.md  CORREÇÃO_FINAL_PARSEMODE.md  CORREÇÃO_NUMPY_RESOLVIDA.md  CORREÇÃO_WEBHOOK_FINAL.md  CORREÇÃO_WEBHOOK_V3.md  CORREÇÕES_FINAIS_IMPLEMENTADAS.md  CORREÇÕES_IMPLEMENTADAS.md  (+479 more)
api/: bot.py  index.py  webhook.py
backup_projeto_completo/: .gitignore  BACKUP_INFO.md  Procfile  README.md  nixpacks.toml  railway.toml
bot/: __init__.py
data/: advanced_features.csv  diagnostic_report_20250522_215959.json  diagnostic_report_20250522_220112.json  diagnostic_report_20250522_220159.json  diagnostic_report_20250522_220245.json  diagnostic_report_20250522_220401.json  feature_config.json  (+19 more)
(+112 files in other folders)
