[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lol-gpt-apostas"
version = "1.0.0"
description = "Bot do Telegram para apostas em LoL"
readme = "README.md"
requires-python = ">=3.9, <3.12"  # Tentativa de forçar Python 3.9-3.11
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]

[project.dependencies]
python-telegram-bot = "20.7"
requests = "2.31.0"
flask = "2.3.3"
python-dotenv = "1.0.0"
numpy = "1.26.2"
pandas = "2.1.3"
scikit-learn = "1.3.2" 